fixed spacing issues

--- a/index.css
+++ b/index.css
@@ -16,8 +16,16 @@ body {
     display: grid;
     align-items: center;
     min-height: 100vh;
-    width: 100%;
+}
 
+.projects {
+    background: linear-gradient(to right, #4F4F51, #2C2B30);
+    margin: 0;
+    padding: 0;
+    display: grid;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
 }
 .sticky-header {
     height: 100%;
